# search-query-parser-cdylib

./: Cargo.toml  README.md  clean_build_release.sh  docker-run.sh
docker/: Dockerfile
src/: lib.rs
