[package]
name = "search-query-parser-cdylib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "search_query_parser"
path = "src/lib.rs"
test = true
doctest = false
edition = "2021"
crate_type = ["cdylib"]

[dependencies]
search-query-parser = "0.1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.85"
jni = "0.21.1"
